2010-12-19 Holger Vogt
 * simplify exp variate generation for RTS noise:
   rnorrexp.c removed, 
   update to randnumb.c, main.c, /maths/misc/makefile.am, visualc/vngspice.vcproj

2010-12-18 Dietmar Warning
 * devices/bsim*/*ask.c: correct multiplier m for certain currents, conductances, charges 
   and capacitances if they are requested by plotting and printing, e.g. @m1[gds]

2010-12-18 Holger Vogt
 * rnorrexp.c, randnumb.c, 1-f-code.c, main.c,
   fteext.h, 1-f-code.h,
   isrcacct.c, isrcload.c, isrcpar.c,
   vsrcacct.c, vsrcload.c, vsrcpar.c,
   maths/misc/makefile.am,
   visualc/vngspice.vcproj, vngspice.sln,
   examples/transient-noise/rts-1.cir, README:
   Random telegraph noise added to independent voltage and current sources
 
2010-12-17 Holger Vogt
 * isrc.c, isrcacct.c, isrcload.c, isrcpar.c, isrcdefs.h:
 transient noise in independent current source

2010-12-15 Dietmar Warning
 * devices/bsim3soi/b4soild.c: fixed a double consideration of the multiplier m
   for conductances gm, gds, gmbs

2010-12-13 Holger Vogt
 * util.c: char* identifiers to remove warnings in MS Visual Studio

2010-12-12  Robert Larice
 * src/frontend/miscvars.c ,
 * src/frontend/trannoise/1-f-code.c ,
 * src/include/1-f-code.h ,
 * src/include/fftext.h ,
 * src/spicelib/devices/vsrc/vsrcacct.c ,
 * src/spicelib/devices/vsrc/vsrcdefs.h ,
 * src/spicelib/devices/vsrc/vsrcload.c ,
 * src/spicelib/devices/vsrc/vsrcpar.c :
    rewrite TRNOISE, with the intention to separate the noise sequenze computation
      from its use in the VSRC device.

2010-12-12 Holger Vogt
 * vsrcacct.c: Patch von R. Larice for safe breakpoints
   with TRNOISE

2010-12-11  Robert Larice
 * src/include/bool.h :
    Change bool from `unsigned char' to `int'
      thats what it is supposed to be in `C' (less warnings, cleaner, etc ...)
    The actual change was accidently injected in a commit from 2010-11-27

2010-12-11  Robert Larice
 * src/frontend/inpcom.c :
    support another non-equality '<>' token
